--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,9 +1,10 @@
-/*  Mulish font */
+/*  Mulish ,Inter font */
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 /* shared styles */
 *{
     font-family: 'Mulish', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .common-title{
@@ -22,10 +23,13 @@
 main{
     margin: 100px 135px;
 }
-/* header styles */
-header{
-    max-width:1200px;
-    margin:0 auto;
+/* header styles*/
+nav{
+    margin:52px 135px 0 135px;
+    margin-bottom: -30px;
+}
+.banner{
+    margin: 0 135px 100px 135px;
 }
 /* navbar styles */
 header h1{
@@ -40,7 +44,8 @@ nav {
     display:flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 40px;
+    /*margin-top: 40px;
+    margin-bottom: 40px;*/
 }
 nav div{
     display:flex;
@@ -51,12 +56,12 @@ nav ul{
     display:flex;
 }
 nav ul li{
-    margin-left:40px;
+    margin-left:44px;
 }
 nav a{
     color: #424247;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.12rem;
     font-weight: 400;
 }
 /*banner section styles */
@@ -81,23 +86,51 @@ nav a{
     width: 676px;
     padding: 24px 247px;
     }
-.banner-buttons{
-    display: inline-flex;
-    padding: 16px;
-    align-items: flex-start;
-    gap: 24px;
-    border-radius: 8px;
-    background: rgba(255, 255, 255, 0.30);
-}
-.banner-buttons button{
-    border-radius: 8px;
-    background: #FF5400;
-    border: 0;
-    padding: 15px 60px;
-    color: #FFF;
-    text-align: center;
-    font-weight: 700;
-}
+.btn-find{
+        border-radius: 8px;
+        background: #FF5400;
+        padding:16px 25px;
+        border:none;
+        text-align:center;
+        display:flex;
+        align-items: center;
+        cursor:pointer;
+        width:100%;
+        height:100%;
+    }
+    .button-text{
+        color: #FFF;
+        text-align: center;
+        font-weight: 700;
+        text-align:center;
+        display:flex;
+        align-items:center;
+        justify-content: center;
+    }
+    .banner-input{
+        background: rgba(255, 255, 255, 0.30);
+        gap: 16px;
+        max-width:770px;
+        height:52px;
+        padding:16px;
+        margin-bottom:106px;
+        margin-left: 200px;
+        margin-top:20px;
+        display:flex;
+        align-items:center;
+        justify-content: space-between;
+        border-radius: 8px;
+    }
+    .banner-input input{
+        border-radius: 8px;
+        background: #FFF;
+        border:none;
+        padding: 16px;
+        width:160px;
+    }
+    input::placeholder{
+        color: rgba(19, 19, 24, 0.50);
+    }
 /*popular tour styles */
 .popular-button{
     border-radius: 8px;
@@ -150,10 +183,12 @@ ul li{
     padding: 25px;
 }
 .part1{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
     gap: 24px;
     margin-top: 48px;
     margin-bottom: 24px;
+    
 }
 .part2{
     margin: 24px 280px 100px 280px;
@@ -168,6 +203,56 @@ ul li{
     border: 1px solid #FF5400;
     padding-left: 40px;
 }
+/*footer styles */
+footer{
+    background: rgba(19, 19, 24, 0.05);
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction:column;
+}
+footer>div{
+    padding-top:110px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom:0px;
+}
+footer >div img{
+    margin-right: 10px;
+}
+
+footer>div> h1{
+    margin-left:0px;
+    color: #131318;
+    font-size: 2.25rem;
+    font-weight: 800;
+}
+.footer-pera{
+    margin-top:16px;
+    color: #5A5A5D;
+    text-align: center;
+    width: 769px;
+}
+.footer-img{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
+    margin-top:0px;
+    padding-top:32px;
+}
+hr{
+    background: #1313181a;
+    width: 872px;
+    height: 1px;
+    margin-top:50px;
+    margin-bottom:50px;
+}
+.all-right{
+    color: #131318;
+    margin-bottom:110px;
+}
 /* responsive */
 /* small or mobile device */
 @media screen and (max-width:600px){
@@ -181,4 +266,5 @@ ul li{
         width: fit-content;
         border-radius: 16px;
     }
+    
 }
